[gd_scene load_steps=6 format=2]

[ext_resource path="res://textures/GUI/MiniMenu.png" type="Texture" id=1]
[ext_resource path="res://Interface/Menu.tres" type="Theme" id=2]
[ext_resource path="res://textures/PlayerGUI/pause.png" type="Texture" id=3]
[ext_resource path="res://Player/Player_GUI/Pause.gd" type="Script" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Pause" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="PauseWindow" type="TextureRect" parent="."]
visible = false
margin_left = 363.0
margin_top = 182.0
margin_right = 661.0
margin_bottom = 418.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="PauseWindow"]
anchor_top = 0.021
anchor_right = 1.003
anchor_bottom = 0.203
margin_top = 0.0439997
margin_right = 0.105988
margin_bottom = 0.0919991
text = "Pasued"
align = 1
valign = 1

[node name="ExitToMenuButton" type="Button" parent="PauseWindow"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -81.0
margin_top = 104.0
margin_right = 85.0
margin_bottom = 160.0
text = "Exit to menu"

[node name="PauseButton" type="Button" parent="."]
margin_left = 984.0
margin_right = 1024.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[connection signal="pressed" from="PauseWindow/ExitToMenuButton" to="." method="_on_ExitToMenuButton_pressed"]
[connection signal="toggled" from="PauseButton" to="." method="_on_PauseButton_toggled"]
